<resources>
    <string name="app_name">My News</string>
    <string name="tab_text_1">Top stories</string>
    <string name="tab_text_2">Most popular</string>
    <string name="tab_text_3">Science</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="search_title">search</string>
    <string name="search_query_term">Search query term</string>


    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--URL for API request-->
    <string name="topstories">https://api.nytimes.com/svc/topstories/v2/home.json?&amp;api-key=799e9f0e6e264b3a8e21b57f3f05dfd0</string>
    <string name="mostpopular">https://api.nytimes.com/svc/mostpopular/v2/mostviewed/all-sections/7.json?&amp;api-key=799e9f0e6e264b3a8e21b57f3f05dfd0</string>
    <string name="sciencenews">https://api.nytimes.com/svc/topstories/v2/science.json?&amp;api-key=799e9f0e6e264b3a8e21b57f3f05dfd0</string>
    <string name="healthnews" >https://api.nytimes.com/svc/topstories/v2/health.json?&amp;api-key=799e9f0e6e264b3a8e21b57f3f05dfd0</string>
    <string name="moviesnews">https://api.nytimes.com/svc/topstories/v2/movies.json?&amp;api-key=799e9f0e6e264b3a8e21b57f3f05dfd0</string>
    <string name="article_search">https://api.nytimes.com/svc/search/v2/articlesearch.json?&amp;api-key=799e9f0e6e264b3a8e21b57f3f05dfd0</string>

    //checkbox
    <string name="health">Health</string>
    <string name="movies">Movies</string>
    <string name="books">Books</string>
    <string name="science">Science</string>
    <string name="begin_date">Begin date</string>
    <string name="end_date">End date</string>
    <string name="date_ex">12/12/2012</string>
    <string name="search">SEARCH</string>


</resources>
